# 03-agents-and-apps-foundations

./: .env.example  .gitignore  01_intro_to_ai_agents.ipynb  02_langgraph_basics.ipynb  03_memory_with_langgraph.ipynb  04_crewAI_basics.ipynb  05_code_architecture_patterns.ipynb  06_fastapi_intro.ipynb  07_streamlit_intro.ipynb  README.md  app_streamlit.py  main.py  pyproject.toml
